--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <meta name="developer" content="Rivas Frits Sasia">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 
     <!-- AOS CSS (Animation On Scroll) -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -558,8 +557,8 @@
                 </div>
 
             </div>
-            <a href="" class="btn bg-color-1 text-white p-2 mt-4">Lihat Semua Project <i
-                    class="fas fa-chevron-right"></i></a>
+            <!-- <a href="" class="btn bg-color-1 text-white p-2 mt-4" disabled>Lihat Semua Project <i 
+                    class="fas fa-chevron-right"></i></a> -->
         </div>
     </div>
 
