--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1 shrink-to-fit=no">
     <meta name="theme-color" content="#7e22ce">
     <meta name="description" content="Rivas Frits Sasia Personal Website" />
-    <meta name="keywords" content="coding, programmer, developer, frontend, frontend-web, website, manado" />
+    <meta name="keywords" content="coding, programmer, developer, frontend, frontend-web, website, manado, rivas frits sasia" />
     <meta name="developer" content="Rivas Frits Sasia">
 
     <!-- Bootstrap CSS -->
