--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@
                                 aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Beginner</div>
                         </div>
 
+                        <p class="skill-vuejs pt-4"><i class="fab fa-vuejs"></i> Vue.js</p>
+                        <div class="progress skill-tools-progress">
+                            <div class="progress-bar progress-bar-vuejs" role="progressbar" style="width: 25%;"
+                                aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">Beginner</div>
+                        </div>
+
                         <p class="skill-python pt-4"><i class="fab fa-python python-icon"></i> Python3</p>
                         <div class="progress skill-tools-progress">
                             <div class="progress-bar progress-bar-python" role="progressbar" style="width: 50%;"
