mengubah format beberapa assets images menjadi webp

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                     <div class="col-lg-6 col-md-6 order-first" data-aos="zoom-in" data-aos-duration="1000"
                         data-aos-easing="ease-in-sine">
-                        <img src="/assets/images/me-img/frits.png" alt="rivas-frits-sasia" loading="lazy"
+                        <img src="/assets/images/me-img/fritssasia.webp" alt="rivas-frits-sasia" loading="lazy"
                             class="jumbotron-hero-image img-fluid float-lg-right">
                     </div>
 
@@ -129,7 +129,7 @@
                 <div class="row">
 
                     <div class="col-lg-6 col-md-6">
-                        <img src="/assets/images/about-img/about-img.png" alt="" loading="lazy"
+                        <img src="/assets/images/about-img/about-img.webp" alt="" loading="lazy"
                             class="profile-img img-fluid">
                     </div>
 
