--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                             <a href="#profile"
                                 class="btn btn-jumbotron btn-eksplor bg-color-1 text-white pr-4 pl-4 pt-2 pb-2"><i
                                     class="fas fa-search"></i> Eksplor</a>
-                            <a href="#profile"
+                            <!-- <a href="#profile"
                                 class="btn btn-jumbotron btn-download-cv bg-color-1 text-white ml-lg-2 ml-md-2 pr-4 pl-4 pt-2 pb-2"><i
-                                    class="fas fa-download"></i> Download CV</a>
+                                    class="fas fa-download"></i> Download CV</a> -->
                         </div>
 
                     </div>
