--- a/index.html
+++ b/index.html
@@ -637,14 +637,14 @@
                         <div class="contact-card-content">
                             <div class="row">
 
-                                <div class="col-lg-6">
+                                <div class="col-lg-6 col-md-6">
                                     <footer class="blockquote-footer text-white pt-1">Email</footer>
                                     <a href="mailto:email@mail.com" class="font-inter contact-email text-white">email@mail.com</a>
                                 </div>
 
-                                <div class="col-lg-6">
+                                <div class="col-lg-6 col-md-6 pt-1 pt-lg-1 pt-md-1">
                                     <footer class="blockquote-footer text-white pt-1">WhatsApp</footer>
-                                    <a href="https://wa.me/6289631046822?text=Halo!" class="font-inter contact-email text-white">+62 896-3104-6822</a>
+                                    <a href="https://wa.me/6289631046822?text=Halo!" class="font-inter contact-whatsapp text-white">+62 896-3104-6822</a>
                                 </div>
 
                             </div>
