--- a/index.html
+++ b/index.html
@@ -638,10 +638,10 @@
 
             <div class="splide" id="splide">
                 <div class="splide__arrows">
-                    <button class="splide__arrow splide__arrow--prev our-clients-splide-arrow">
+                    <button class="splide__arrow splide__arrow--prev our-clients-splide-arrow ml-lg-5">
                         <ion-icon name="arrow-back-sharp"></ion-icon>
                     </button>
-                    <button class="splide__arrow splide__arrow--next our-clients-splide-arrow">
+                    <button class="splide__arrow splide__arrow--next our-clients-splide-arrow mr-lg-5">
                         <ion-icon name="arrow-forward-sharp"></ion-icon>
                     </button>
                 </div>
