mengubah icon .splide__arrow

--- a/index.html
+++ b/index.html
@@ -639,10 +639,10 @@
             <div class="splide" id="splide">
                 <div class="splide__arrows">
                     <button class="splide__arrow splide__arrow--prev our-clients-splide-arrow ml-lg-5">
-                        <ion-icon name="arrow-back-sharp"></ion-icon>
+                        <ion-icon name="caret-back-outline"></ion-icon>
                     </button>
                     <button class="splide__arrow splide__arrow--next our-clients-splide-arrow mr-lg-5">
-                        <ion-icon name="arrow-forward-sharp"></ion-icon>
+                        <ion-icon name="caret-forward-outline"></ion-icon>
                     </button>
                 </div>
                 <div class="splide__track">
