--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             left: 0;
             right: 0;
             width: 100%;
-            height: 100%;
+            height: 100vh;
             background-color: rgba(22, 22, 22, 0.8);
             z-index: 50000 !important;
             
